flask-bigdata-office/flask-bigdata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-bigdata-office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-bigdata-office
  template:
    metadata:
      labels:
        app: flask-bigdata-office
    spec:
      containers:
      - name: flask-bigdata-office
        image: wolihi/flask-bigdata-office:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 7792
