flask-bigdata-office/flask-bigdata-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-bigdata-office-svc
  namespace: default
spec:
  ports:
  - name: port
    port: 7792
    protocol: TCP
    targetPort: 7792
  selector:
    app: flask-bigdata-office
  #type: NodePort
