flask-bigdata-office/flask-bigdata-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-flask-bigdata-office
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    wginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Real-IP $http_x_forwarded_for;
spec:
  rules:
  - host: www.ezzysleep.com
    http:
      paths:
      - backend:
          serviceName: flask-bigdata-office-svc
          servicePort: 7788
        path: /
  - host: ezzysleep.com
    http:
      paths:
      - backend:
          serviceName: flask-bigdata-office-svc
          servicePort: 7788
        path: /
